objects/On_Site_Registration_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>On Site Registration Setup</relationshipLabel>
        <relationshipName>On_Site_Registration_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>available_fields__c</fullName>
        <label>available fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>visible_fields__c</fullName>
        <label>visible fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>On Site Registration Setup</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>On Site Registration Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>On Site Registration Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>